@@ -38,7 +38,7 @@
     <!-- Add the absolute path for $JBOSS_HOME below to manage another instance -->
     <errai.jboss.home>${project.build.directory}/wildfly-${as.version}</errai.jboss.home>
     <gwt.compiler.localWorkers>1</gwt.compiler.localWorkers>
-    <gwt.memory.settings>-Xmx4g -Xms1g -XX:MaxPermSize=512m -XX:PermSize=128m -Xss1M</gwt.memory.settings>
+    <gwt.memory.settings>-Xmx4g -Xms1g -Xss1M</gwt.memory.settings>
   </properties>
 
   <dependencies>
@@ -137,6 +137,12 @@
       <groupId>org.jboss.resteasy</groupId>
       <artifactId>resteasy-cdi</artifactId>
       <scope>provided</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>javassist</groupId>
+          <artifactId>javassist</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
 
     <dependency>
@@ -870,7 +876,7 @@
     </dependency>
     <dependency>
       <groupId>org.jboss.errai</groupId>
-      <artifactId>errai-weld-integration</artifactId>
+      <artifactId>errai-cdi-server</artifactId>
     </dependency>
 
     <!-- GWT and GWT Extensions -->
